tests/ui/timer_option_name.stderr
error[E0597]: `name` does not live long enough
  --> tests/ui/timer_option_name.rs:19:22
   |
15 |     let timer = pin!(Timer::context());
   |                 ---------------------- a temporary with access to the borrow is created here ...
16 |
17 |     let name = CString::new("name").unwrap();
   |         ---- binding `name` declared here
18 |     let mut opts = TimerOptions::default();
19 |     opts.name = Some(&name);
   |                      ^^^^^ borrowed value does not live long enough
...
22 | }
   | -
   | |
   | `name` dropped here while still borrowed
   | ... and the borrow might be used here, when that temporary is dropped and runs the `Drop` code for type `TimerContext`
